<resources>
    <string name="app_name">Geo-FinalProject</string>
    <string name="message">Choose a continent</string>
    <string name="NA">North America</string>
    <string name="SA">South America</string>
    <string name="Afr">Africa</string>
    <string name="Eur">Europe</string>
    <string name="Ai">Asia</string>
    <string name="AnO">Australia/Oceania</string>
    <string name="Ant">Antarctica</string>
    <string name="btnHome">Home</string>
    <string name="loginMessage">Please enter your information</string>
    <string name="nameTxt">Name</string>
    <string name="usernameTxt">Username</string>
    <string name="emailTxt">Email</string>
    <string name="passwordTxt">Password</string>
    <string name="passwordReEntryTxt">Re-enter Password</string>
    <string name="continentTxt">Continent</string>
    <string name="nationTxt">Country</string>
    <string name="loginBtn">Login</string>
    <string name="errName">Invalid name. Please retry.</string>
    <string name="errUser">Invalid username. Please retry.</string>
    <string name="errEmail">Invalid email. Please retry.</string>
    <string name="errPassword">Invalid password. Please retry.</string>
    <string name="errRePass">Passwords are not the same. Please retry.</string>
    <string name="errContinent">Invalid continent. Please retry.</string>
    <string name="errNation">Invalid country. Please retry.</string>
    <string name="profile">Your Profile</string>
    <string name="question">Trivia Questions</string>
    <string name="correctMes">Correct!</string>
    <string name="incorrectMes">Incorrect. The correct answer is</string>
    <string name="completed">All Questions Completed</string>
</resources>