<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/idNorthAmerica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/NA"
        app:layout_constraintBottom_toTopOf="@+id/idEurope"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/idSouthAmerica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/SA"
        app:layout_constraintBottom_toTopOf="@+id/idAsia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/idNorthAmerica" />

    <Button
        android:id="@+id/idEurope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/Eur"
        app:layout_constraintBottom_toTopOf="@+id/idAfrica"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/idAsia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/Ai"
        app:layout_constraintBottom_toTopOf="@+id/idAntarctica"
        app:layout_constraintStart_toEndOf="@+id/idEurope" />

    <Button
        android:id="@+id/idAfrica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/Afr"
        app:layout_constraintBottom_toTopOf="@+id/idAusnOcean"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/idAntarctica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/Ant"
        app:layout_constraintBottom_toTopOf="@+id/idAusnOcean"
        app:layout_constraintStart_toEndOf="@+id/idAfrica" />

    <Button
        android:id="@+id/idAusnOcean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/AnO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/idUserMessage"
        android:layout_width="226dp"
        android:layout_height="36dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="93dp"
        android:gravity="center_horizontal"
        android:text="@string/message"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idworldmap" />

    <ImageView
        android:id="@+id/idworldmap"
        android:layout_width="414dp"
        android:layout_height="261dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/worldmap" />

    <Button
        android:id="@+id/idUserBtn"
        android:layout_width="81dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/material_dynamic_primary30"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>