<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SouthAmerica">

    <ImageView
        android:id="@+id/idimageSA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/southamerica" />

    <TextView
        android:id="@+id/idSAtitle"
        android:layout_width="147dp"
        android:layout_height="23dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="139dp"
        android:gravity="center_horizontal"
        android:text="@string/SA"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idimageSA" />

    <Button
        android:id="@+id/idBtnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="75dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/btnHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/idQuestionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="149dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSAtitle" />

    <TextView
        android:id="@+id/ranFactTxt"
        android:layout_width="334dp"
        android:layout_height="177dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/idBtnHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idQuestionBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>